--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,8 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$mag-blue: #004080;
+$mag-grey: #595959;
+$mag-green: #49a078ff;
+$darker-mag-green: #3b7f5f;
+$mag-light-grey: #eeeeeeff;
