--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
+<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h2>
+<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+<%= link_to 'Click here', '#', class:'btn-mag btn-green' %>
