--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,9 @@
-// Specific CSS for your home-page
+.avt-home {
+  position: absolute;
+  top: 170px;
+  left: 48px;
+}
+
+#btn-contact {
+  //height: 40px;
+}
