--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,27 @@
 
-<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
-<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h2>
-<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-<%= link_to 'Click here', '#', class:'btn-mag btn-green' %>
+<div class="page-content">
+
+  <%= image_tag "adrien.jpeg", alt: "Adrien Maglo", class:'avatar-large avatar-bordered avt-home' %>
+  <div class="d-flex justify-content-between">
+    <div>
+      <h1>Magsoft <br> Adrien Maglo </h1>
+      <p>Paris area, France</p>
+    </div>
+    <div class="d-flex justify-content-center align-items-center">
+      <%= link_to 'CONTACT ME', '#', class:'btn-mag btn-green', id:'btn-contact' %>
+    </div>
+  </div>
+
+
+    <div>
+      <p>Hello! Welcome to my home page. Let me introduce myself.
+      I'm a French software engineer with a PhD in computer science. I received my engineer degree from Ecole Centrale Paris with the "Advanced system" speciality and I defended my PhD in computer science at the Applied Mathematics Laboratory of Ecole Centrale Paris. My thesis advisor was Céline Hudelot.
+      The title of my PhD thesis is: "Progressive and Random Accessible Mesh Compression". My research interests included: progressive and random accessible 3D mesh compression, 3D mesh adaptation for transmission and polygonal remeshing. Please have a look at my publications if you are interested in those subjects.
+      I am currently doing R&D at Videolabs, the main contributor to VLC media player, the famous multi-platform open source media player. There I'm working on various project, sometimes involving research.
+      Disclaimer: I am not a native English speaker. So, please excuse the mistakes on this web site. ;-)
+      </p>
+    </div>
+</div>
+
+
+
