--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,6 +3,7 @@
     This website was made with <i class="fas fa-heart"></i> by Leni
   </div>
   <div class="footer-links">
+    <p>Copyright 2008-2019 <br> Adrien Maglo</p>
     <a href="https://github.com/magwyz"><i class="fab fa-github" target="_blank" rel="noopener noreferrer"></i></a>
     <a href="https://www.linkedin.com/in/adrien-maglo-0590a050/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
   </div>
