--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -5,6 +5,7 @@
   font-size: 20px;
   border-radius: 50px;
   box-shadow: 0px 10px 15px 0px rgba(73, 160, 120, 0.75);
+  text-align: center;
 }
 
 .btn-green {
