--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,7 +4,6 @@
   padding: 0px 50px;
   border-top-left-radius: 60px;
   border-top-right-radius: 60px;
-  position: fixed;
   bottom: 0px;
   width: 100vw;
   color: $mag-grey;
@@ -27,10 +26,27 @@
 .footer-links a:hover {
   opacity: 1;
 }
+
+.footer-links p {
+  text-align: right;
+  color: rgb(200, 200, 200);
+  margin-bottom: 0px;
+  line-height: 1;
+  font-size: 10px;
+  margin-right: 10px;
+}
+
 .footer .fa-heart {
   color: rgb(200, 200, 200);
 }
 
 .footer-copyright {
   color: rgb(200, 200, 200);
+  font-size: 12px;
+}
+
+@media (max-width: 400px) {
+  .footer-copyright {
+    display: none;
+  }
 }
