--- a/app/assets/stylesheets/config/_layout.scss
+++ b/app/assets/stylesheets/config/_layout.scss
@@ -1,6 +1,6 @@
 h1, h2, h3 {
  color: $mag-blue;
- font-weight: bolder;
+ font-weight: 700 !important;
 }
 
 p {
@@ -20,4 +20,21 @@ a:hover {
 
 body {
   background-color: #fcfcfcff !important;
+}
+
+.page-content {
+  margin-top: 55px;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 200px;
+}
+
+.body-content {
+  display: flex;
+}
+
+@media (max-width: 400px) {
+  .body-content {
+    display: block;
+  }
 }
