--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
   </head>
   <body>
     <div class="banner"></div>
-    <%= yield %>
+    <div class="body-content">
+      <%= render 'shared/navbar' %>
+      <%= yield %>
+    </div>
+
     <%= render 'shared/footer' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
