--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <div class="page-content">
 
-  <%= image_tag "adrien.jpeg", alt: "Adrien Maglo", class:'avatar-large avatar-bordered avt-home' %>
+  <%= image_tag "adrien.jpg", alt: "Adrien Maglo", class:'avatar-large avatar-bordered avt-home' %>
   <div class="d-flex justify-content-between">
     <div>
       <h1>Magsoft <br> Adrien Maglo </h1>
