--- a/app/assets/stylesheets/config/_layout.scss
+++ b/app/assets/stylesheets/config/_layout.scss
@@ -24,9 +24,16 @@ body {
 
 .page-content {
   margin-top: 55px;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: 100px;
+  margin-right: 100px;
   margin-bottom: 200px;
+}
+
+@media (max-width: 400px) {
+  .page-content {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
 
 .body-content {
