--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,10 +1,12 @@
 .footer {
+  margin-bottom: -200px;
   background-color: $mag-light-grey;
   height: 100px;
   padding: 0px 50px;
   border-top-left-radius: 60px;
   border-top-right-radius: 60px;
   bottom: 0px;
+  position: absolute;
   width: 100vw;
   color: $mag-grey;
   display: flex;
