--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,7 @@
   <div class="d-flex justify-content-between">
     <div>
       <h1>Magsoft <br> Adrien Maglo </h1>
+      <hr class="blue-short">
       <p>Paris area, France</p>
     </div>
     <div class="d-flex justify-content-center align-items-center">
@@ -14,12 +15,18 @@
 
 
     <div>
-      <p>Hello! Welcome to my home page. Let me introduce myself.
-      I'm a French software engineer with a PhD in computer science. I received my engineer degree from Ecole Centrale Paris with the "Advanced system" speciality and I defended my PhD in computer science at the Applied Mathematics Laboratory of Ecole Centrale Paris. My thesis advisor was Céline Hudelot.
-      The title of my PhD thesis is: "Progressive and Random Accessible Mesh Compression". My research interests included: progressive and random accessible 3D mesh compression, 3D mesh adaptation for transmission and polygonal remeshing. Please have a look at my publications if you are interested in those subjects.
-      I am currently doing R&D at Videolabs, the main contributor to VLC media player, the famous multi-platform open source media player. There I'm working on various project, sometimes involving research.
-      Disclaimer: I am not a native English speaker. So, please excuse the mistakes on this web site. ;-)
+
+      <p>Hello! Welcome to my home page. Let me introduce myself. </p>
+      <p> I'm a French software engineer with a PhD in computer science. I received my engineer degree from <%= link_to 'Ecole Centrale Paris' , 'https://www.centralesupelec.fr/', target:"_blank" %> with the "Advanced system" speciality and I defended my PhD in computer science at the <%= link_to 'Applied Mathematics Laboratory', 'http://mics.centralesupelec.fr/fr/', target:"_blank" %> of Ecole Centrale Paris. My thesis advisor was <%= link_to 'Céline Hudelot', 'http://perso.ecp.fr/~hudelotc/Files/Perso.html', target:"_blank" %>.
       </p>
+      <p>
+        The title of my PhD thesis is: "Progressive and Random Accessible Mesh Compression". My research interests included: progressive and random accessible 3D mesh compression, 3D mesh adaptation for transmission and polygonal remeshing. Please have a look at my publications if you are interested in those subjects.
+      </p>
+      <p>
+        I am currently doing R&D at <%= link_to 'Videolabs','https://videolabs.io/', target:"_blank" %>, the main contributor to VLC media player, the famous multi-platform open source media player. There I'm working on various project, sometimes involving research. <br>
+      </p>
+      <p>Disclaimer: I am not a native English speaker. So, please excuse the mistakes on this web site. ;-)</p>
+
     </div>
 </div>
 
