--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,12 +5,12 @@
     Menu
   </h2>
   <div class="dropdown-menu dropdown-menu-right">
-    <%= link_to 'Home', '#', class:'navbar-tab dropdown-item' %>
-    <%= link_to 'Publications', '#', class:'navbar-tab dropdown-item' %>
-    <%= link_to 'Projects', '#', class:'navbar-tab dropdown-item' %>
-    <%= link_to 'Source code', '#', class:'navbar-tab dropdown-item' %>
-    <%= link_to 'Resume', '#', class:'navbar-tab dropdown-item' %>
-    <%= link_to 'Contact', '#', class:'navbar-tab dropdown-item' %>
+    <%= link_to 'Home', root_path, class:'navbar-tab dropdown-item' %>
+    <%= link_to 'Publications', publications_path, class:'navbar-tab dropdown-item' %>
+    <%= link_to 'Projects', projects_path, class:'navbar-tab dropdown-item' %>
+    <%= link_to 'Source code', source_code_path, class:'navbar-tab dropdown-item' %>
+    <%= link_to 'Resume', resume_path, class:'navbar-tab dropdown-item' %>
+    <%= link_to 'Contact',  contact_path, class:'navbar-tab dropdown-item' %>
   </div>
 
 
