--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,13 +2,13 @@
 <div class="page-content">
 
   <%= image_tag "adrien.jpg", alt: "Adrien Maglo", class:'avatar-large avatar-bordered avt-home' %>
-  <div class="d-flex justify-content-between">
+  <div class="hp-hearders">
     <div>
       <h1>Magsoft <br> Adrien Maglo </h1>
       <hr class="blue-short">
       <p>Paris area, France</p>
     </div>
-    <div class="d-flex justify-content-center align-items-center">
+    <div class="btn-contact-box">
       <%= link_to 'CONTACT ME', '#', class:'btn-mag btn-green', id:'btn-contact' %>
     </div>
   </div>
