--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,7 @@
 .avt-home {
   position: absolute;
-  top: 240px;
-  left: 48px;
-}
-
-#btn-contact {
-  margin-bottom: 45px;
+  top: 135px;
+  left: 70px;
 }
 
 .blue-short {
@@ -14,5 +10,29 @@
   height: 6px;
   width: 100px;
   margin-left: 0px;
+}
 
+.hp-hearders {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 400px) {
+  .hp-hearders {
+    display: block;
+  }
+}
+
+.btn-contact-box {
+  padding-top: 40px;
+  justify-content: center;
+  width: auto;
+}
+
+@media (max-width: 400px) {
+  .btn-contact-box {
+    justify-content: start;
+    padding-top: 0px;
+    padding-bottom: 30px;
+  }
 }
