--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -38,3 +38,11 @@
   color: $mag-green;
   background-color: #fcfcfcff;
 }
+
+@media (max-width: 400px) {
+  .dropdown-menu-right {
+    width: 100vw;
+    padding-left: 75px;
+    left: 0px;
+  }
+}
