page projects ok

--- a/app/assets/stylesheets/config/_layout.scss
+++ b/app/assets/stylesheets/config/_layout.scss
@@ -39,6 +39,10 @@ body {
   margin-top: 55px;
   margin-left: 100px;
   margin-right: 400px;
+
+  a:hover {
+    text-decoration: none;
+  }
 }
 
 @media (max-width: 400px) {
