--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -9,8 +9,10 @@
 
   <%= link_to 'https://www.videolan.org/', target:"_blank" do  %>
   <div class="card-project">
-    <div class="img-container", id='orange-cone'>
-        <%= image_tag "vlc-m-p.png", alt: "vlc-logo"%>
+    <div class="img-mob">
+      <div class="img-container", id='orange-cone'>
+          <%= image_tag "vlc-m-p.png", alt: "vlc-logo"%>
+      </div>
     </div>
     <div class="project-desc">
       <h3>VLC Media Player</h3>
@@ -23,8 +25,10 @@
 
   <%= link_to 'http://www.pastec.io/', target:"_blank" do %>
   <div class="card-project">
-    <div class="img-container", id='pastec-logo' >
-      <%= image_tag "pastec.png", alt: "pastec-logo"%>
+    <div class="img-mob">
+      <div class="img-container", id='pastec-logo' >
+        <%= image_tag "pastec.png", alt: "pastec-logo"%>
+      </div>
     </div>
     <div class="project-desc">
       <h3>Pastec</h3>
@@ -37,8 +41,10 @@
 
   <%= link_to 'https://www.videolan.org/projects/vlma/', target:"_blank" do  %>
   <div class="card-project">
-    <div class="img-container", id='VLMa-logo' >
-      <%= image_tag "VLMa.png", alt: "VLMa-logo"%>
+    <div class="img-mob">
+      <div class="img-container", id='VLMa-logo' >
+        <%= image_tag "VLMa.png", alt: "VLMa-logo"%>
+      </div>
     </div>
     <div class="project-desc">
       <h3>VLMa</h3>
