fixed the contact me button

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -26,7 +26,7 @@
 .btn-contact-box {
   padding-top: 40px;
   justify-content: center;
-  width: auto;
+  width: 200px;
 }
 
 @media (max-width: 400px) {
