long time not seen

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -11,7 +11,7 @@
   <div class="card-project">
     <div class="img-mob">
       <div class="img-container", id='orange-cone'>
-          <%= image_tag "vlc-m-p.png", alt: "vlc-logo"%>
+          <%= image_tag "vlc-m-p.png", alt: "vlc-logo", class:'img-project'%>
       </div>
     </div>
     <div class="project-desc">
@@ -27,7 +27,7 @@
   <div class="card-project">
     <div class="img-mob">
       <div class="img-container", id='pastec-logo' >
-        <%= image_tag "pastec.png", alt: "pastec-logo"%>
+        <%= image_tag "pastec.png", alt: "pastec-logo", class:'img-project'%>
       </div>
     </div>
     <div class="project-desc">
@@ -43,7 +43,7 @@
   <div class="card-project">
     <div class="img-mob">
       <div class="img-container", id='VLMa-logo' >
-        <%= image_tag "VLMa.png", alt: "VLMa-logo"%>
+        <%= image_tag "VLMa.png", alt: "VLMa-logo", class:'img-project'%>
       </div>
     </div>
     <div class="project-desc">
