--- a/app/views/pages/publications.html.erb
+++ b/app/views/pages/publications.html.erb
@@ -7,7 +7,7 @@
 
   <div class="card-project">
     <div class="img-mob">
-      <div class="img-container card-shadow" >
+      <div class="" >
           <%= image_tag "CSUR15.png", alt: "CSUR15"%>
       </div>
     </div>
@@ -21,7 +21,7 @@
 
   <div class="card-project">
     <div class="img-mob">
-      <div class="img-container card-shadow" >
+      <div class="" >
         <%= image_tag "SMI13.png", alt: "SMI13-logo"%>
       </div>
     </div>
@@ -37,7 +37,7 @@
 
   <div class="card-project">
     <div class="img-mob">
-      <div class="img-container card-shadow" >
+      <div class="" >
         <%= image_tag "SMI12.png", alt: "SMI12-logo"%>
       </div>
     </div>
@@ -53,7 +53,7 @@
 
   <div class="card-project">
     <div class="img-mob">
-      <div class="img-container card-shadow" >
+      <div class="" >
         <%= image_tag "CGI11.png", alt: "CGI11-logo"%>
       </div>
     </div>
@@ -68,7 +68,7 @@
 
   <div class="card-project">
     <div class="img-mob">
-      <div class="img-container card-shadow" >
+      <div class="" >
         <%= image_tag "web3d10.png", alt: "web3d10-logo"%>
       </div>
     </div>
