working on the publication page & links

--- a/app/views/pages/publications.html.erb
+++ b/app/views/pages/publications.html.erb
@@ -8,7 +8,7 @@
   <div class="card-project">
     <div class="img-mob">
       <div class="" >
-          <%= image_tag "CSUR15.png", alt: "CSUR15"%>
+          <%= image_tag "CSUR15.png", alt: "CSUR15", class:'img-publication'%>
       </div>
     </div>
     <div class="project-desc">
@@ -22,23 +22,23 @@
   <div class="card-project">
     <div class="img-mob">
       <div class="" >
-        <%= image_tag "SMI13.png", alt: "SMI13-logo"%>
+        <%= image_tag "SMI13.png", alt: "SMI13-logo", class:'img-publication', id:'SMI13-logo'%>
       </div>
     </div>
     <div class="project-desc">
       <h3>POMAR: Compression of Progressive Oriented Meshes Accessible Randomly</h3>
       <p>Adrien Maglo, Ian Grimstead and Céline Hudelot.</p>
       <p>In Computer & Graphics, Proceedings of Shape Modeling International 2013, Bournemouth, United Kingdom, July 2013.</p>
-      <p><%= link_to 'Preprint', '#'  %></p>
-      <p><%= link_to 'Source code', '#'  %></p>
-      <p><%= link_to 'Video demonstration', '#'  %></p>
+      <p><%= link_to 'Preprint', '/SMI13.pdf'  %></p>
+      <p><%= link_to 'Source code', pomar_path %></p>
+      <p><%= link_to 'Video demonstration', '/POMARdemo1.mp4'  %></p>
     </div>
   </div>
 
   <div class="card-project">
     <div class="img-mob">
       <div class="" >
-        <%= image_tag "SMI12.png", alt: "SMI12-logo"%>
+        <%= image_tag "SMI12.png", alt: "SMI12-logo", class:'img-publication', id:'SMI12-logo'%>
       </div>
     </div>
     <div class="project-desc">
@@ -54,7 +54,7 @@
   <div class="card-project">
     <div class="img-mob">
       <div class="" >
-        <%= image_tag "CGI11.png", alt: "CGI11-logo"%>
+        <%= image_tag "CGI11.png", alt: "CGI11-logo", class:'img-publication', id:'CGI11-logo'%>
       </div>
     </div>
     <div class="project-desc">
@@ -69,7 +69,7 @@
   <div class="card-project">
     <div class="img-mob">
       <div class="" >
-        <%= image_tag "web3d10.png", alt: "web3d10-logo"%>
+        <%= image_tag "web3d10.png", alt: "web3d10-logo", class:'img-publication', id:'web3d10-logo'%>
       </div>
     </div>
     <div class="project-desc">
