--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -7,6 +7,8 @@
   box-shadow: 0px 10px 15px 0px rgba(73, 160, 120, 0.75);
   text-align: center;
   white-space: nowrap;
+  border: none;
+
 }
 
 .btn-green {
@@ -20,4 +22,23 @@
   color: white;
 }
 
+.btn-contact-box {
+  padding-top: 40px;
+  width: 200px;
+  a {
+    font-weight: lighter
+  }
+}
+
+.btn-mag:focus {
+  outline: none;
+}
+
+@media (max-width: 400px) {
+  .btn-contact-box {
+    justify-content: start;
+    padding-top: 0px;
+    padding-bottom: 30px;
+  }
+}
 
