--- a/app/assets/stylesheets/pages/_publications.scss
+++ b/app/assets/stylesheets/pages/_publications.scss
@@ -1,3 +1,35 @@
 .card-shadow {
   box-shadow: 0px 10px 15px 0px rgb(200, 200, 200);
 }
+
+.img-publication {
+  width: 200px;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  transition: all 0.5s ease-out;
+  box-shadow: 0px 10px 15px 0px $light-gray;
+  object-fit: contain;
+  background-color: white;
+}
+
+
+.img-publication:hover {
+    transform : scale(1.1);
+  }
+
+
+#SMI12-logo{
+  height: 240px;
+}
+
+#SMI13-logo{
+  height: 320px;
+}
+
+#CGI11-logo{
+  height: 300px;
+}
+
+#web3d10-logo{
+  height: 340px;
+}
