--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -26,7 +26,15 @@
   padding-top: 40px;
   width: 200px;
   a {
-    font-weight: lighter
+    font-weight: lighter;
+  }
+}
+
+.btn-dl-box {
+  margin-top: 30px;
+  a {
+    font-weight: lighter;
+    margin-top: 0px;
   }
 }
 
