--- a/app/views/pages/pomar.html.erb
+++ b/app/views/pages/pomar.html.erb
@@ -6,7 +6,7 @@
       <h1>Compression of Progressive Oriented Meshes Accessible Randomly - POMAR </h1>
       <hr class="blue-short">
     </div>
-    <div class="btn-contact-box">
+    <div class="btn-dl-box">
       <%= link_to'POMAR_src_v0.1.zip' do %>
       <button class="btn-mag btn-green">DOWNLOAD<br> SOURCE CODE </button>
       <% end %>
@@ -33,6 +33,11 @@
     <div>
       <h2>Acknowledgements</h2>
       <p>This work has been founded by French National Research Agency (ANR) through COSINUS program (project COLLAVIZ no. ANR-08-COSI-003) and the LRC with the CEA DAM DIF.</p>
+    </div>
+
+    <div>
+      <p style='margin-bottom: 0px'><%= link_to 'Preprint', '/SMI13.pdf', target: "_blank" %></p>
+      <p style='margin-bottom: 0px'><%= link_to 'Video demonstration', '/POMARdemo1.mp4', target: "_blank" %></p>
     </div>
 
 
