--- a/app/views/pages/publications.html.erb
+++ b/app/views/pages/publications.html.erb
@@ -29,9 +29,9 @@
       <h3>POMAR: Compression of Progressive Oriented Meshes Accessible Randomly</h3>
       <p>Adrien Maglo, Ian Grimstead and Céline Hudelot.</p>
       <p>In Computer & Graphics, Proceedings of Shape Modeling International 2013, Bournemouth, United Kingdom, July 2013.</p>
-      <p><%= link_to 'Preprint', '/SMI13.pdf'  %></p>
+      <p><%= link_to 'Preprint', '/SMI13.pdf', target: "_blank" %></p>
       <p><%= link_to 'Source code', pomar_path %></p>
-      <p><%= link_to 'Video demonstration', '/POMARdemo1.mp4'  %></p>
+      <p><%= link_to 'Video demonstration', '/POMARdemo1.mp4', target: "_blank" %></p>
     </div>
   </div>
 
@@ -45,9 +45,9 @@
       <h3>Progressive Compression of Manifold Polygon Meshes</h3>
       <p>Adrien Maglo, Clément Courbet, Pierre Alliez and Céline Hudelot.</p>
       <p>In Computer & Graphics, Proceedings of Shape Modeling International 2012, College Station, USA, May 2012.</p>
-      <p><%= link_to 'Preprint', '#'  %></p>
-      <p><%= link_to 'Source code', '#'  %></p>
-      <p><%= link_to 'Video demonstration', '#'  %></p>
+      <p><%= link_to 'Preprint', '/SMI12.pdf', target: "_blank" %></p>
+      <p><%= link_to 'Source code', ppmc_path %></p>
+      <p><%= link_to 'Video demonstration', '/PPMC.mp4', target: "_blank" %></p>
     </div>
   </div>
 
