last commit of the day

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
       <p>Paris area, France</p>
     </div>
     <div class="btn-contact-box">
-      <%= link_to 'CONTACT ME', '#', class:'btn-mag btn-green'%>
+      <%= link_to 'CONTACT ME', contact_path, class:'btn-mag btn-green'%>
     </div>
   </div>
 
