--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,1 +1,9 @@
-<h1>Still work in progress... Stay tuned!</h1>
+<div class="page-content">
+
+  <div class="page-headers">
+    <h1>My Resume</h1>
+    <hr class="blue-short">
+  </div>
+
+  <p> Still work in progress... Stay tuned!
+</div>
