--- a/app/views/pages/source-code.html.erb
+++ b/app/views/pages/source-code.html.erb
@@ -1,1 +1,14 @@
-<h1>Still work in progress... Stay tuned!</h1>
+<div class="page-content">
+
+  <div class="page-headers">
+    <h1>Source Code</h1>
+    <hr class="blue-short">
+  </div>
+
+  <div>
+    <a href="https://github.com/magwyz"><i class="fab fa-github" target="_blank" rel="noopener noreferrer"></i></a>
+    <p>Find my latest work <br>on my Github account.</p>
+  </div>
+
+  <p> Still work in progress... Stay tuned!
+</div>
