--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <%= link_to 'Projects', projects_path, class:'navbar-tab dropdown-item' %>
     <%= link_to 'Source code', source_code_path, class:'navbar-tab dropdown-item' %>
     <%= link_to 'Resume', resume_path, class:'navbar-tab dropdown-item' %>
-    <%= link_to 'Contact', '#', class:'navbar-tab dropdown-item' %>
+    <%= link_to 'Contact', contact_path, class:'navbar-tab dropdown-item' %>
   </div>
 
 </div>
