--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,1 +1,9 @@
-<h1>Still work in progress... Stay tuned!</h1>
+<div class="page-content">
+
+  <div class="page-headers">
+    <h1>Contact me</h1>
+    <hr class="blue-short">
+  </div>
+
+  <p> Still work in progress... Stay tuned!</p>
+</div>
