making the resume page

--- a/app/views/pages/publications.html.erb
+++ b/app/views/pages/publications.html.erb
@@ -7,7 +7,7 @@
 
   <div class="card-project">
     <div class="img-mob">
-      <div class="" >
+      <div>
           <%= image_tag "CSUR15.png", alt: "CSUR15", class:'img-publication'%>
       </div>
     </div>
@@ -22,7 +22,7 @@
   <%= link_to pomar_path do  %>
   <div class="card-project">
     <div class="img-mob">
-      <div class="" >
+      <div>
         <%= image_tag "SMI13.png", alt: "SMI13-logo", class:'img-publication', id:'SMI13-logo'%>
       </div>
     </div>
@@ -40,7 +40,7 @@
   <%= link_to ppmc_path do  %>
   <div class="card-project">
     <div class="img-mob">
-      <div class="" >
+      <div>
         <%= image_tag "SMI12.png", alt: "SMI12-logo", class:'img-publication', id:'SMI12-logo'%>
       </div>
     </div>
@@ -57,7 +57,7 @@
 
   <div class="card-project">
     <div class="img-mob">
-      <div class="" >
+      <div>
         <%= image_tag "CGI11.png", alt: "CGI11-logo", class:'img-publication', id:'CGI11-logo'%>
       </div>
     </div>
@@ -66,13 +66,13 @@
       <p>Adrien Maglo, Ian Grimstead and Céline Hudelot.</p>
       <p>In Proceedings of Computer Graphics International 2011, Ottawa, Canada, June 2011.</p>
       <p><%= link_to 'Paper', '/randomProgressiveCompressionCGI.pdf'  %></p>
-      <p><%= link_to 'Video demonstration', '#'  %></p>
+<!--       <p><%#= link_to 'Video demonstration', '#'  %></p> -->
     </div>
   </div>
 
   <div class="card-project">
     <div class="img-mob">
-      <div class="" >
+      <div>
         <%= image_tag "web3d10.png", alt: "web3d10-logo", class:'img-publication', id:'web3d10-logo'%>
       </div>
     </div>
@@ -81,7 +81,7 @@
       <p>Adrien Maglo, Guillaume Lavoué, Céline Hudelot, Ho Lee, Christophe Mouton and Florent Dupont.</p>
       <p>In Proceedings of Web3D '10, New York, USA, 109-116.</p>
       <p><%= link_to 'Preprint', '/Web3D10.pdf'  %></p>
-      <p><%= link_to 'Video demonstration', '#'  %></p>
+<!--       <p><%#= link_to 'Video demonstration', '#'  %></p> -->
     </div>
   </div>
 
