working on the resume

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,17 @@
+.mb60 {
+  margin-bottom: 60px;
+}
+
+.mb40 {
+  margin-bottom: 40px;
+}
+
+.mb20 {
+  margin-bottom: 20px;
+}
+
 .card-project {
   display: flex;
-  margin-bottom: 60px;
   align-items: center;
 
   .img-container {
