--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -8,7 +8,7 @@
 
 
   <%= link_to 'https://www.videolan.org/', target:"_blank" do  %>
-  <div class="card-project">
+  <div class="card-project mb60">
     <div class="img-mob">
       <div class="img-container", id='orange-cone'>
           <%= image_tag "vlc-m-p.png", alt: "vlc-logo", class:'img-project'%>
@@ -24,7 +24,7 @@
   <% end %>
 
   <%= link_to 'http://www.pastec.io/', target:"_blank" do %>
-  <div class="card-project">
+  <div class="card-project mb60">
     <div class="img-mob">
       <div class="img-container", id='pastec-logo' >
         <%= image_tag "pastec.png", alt: "pastec-logo", class:'img-project'%>
@@ -40,7 +40,7 @@
   <% end %>
 
   <%= link_to 'https://www.videolan.org/projects/vlma/', target:"_blank" do  %>
-  <div class="card-project">
+  <div class="card-project mb60">
     <div class="img-mob">
       <div class="img-container", id='VLMa-logo' >
         <%= image_tag "VLMa.png", alt: "VLMa-logo", class:'img-project'%>
