--- a/app/views/pages/publications.html.erb
+++ b/app/views/pages/publications.html.erb
@@ -5,7 +5,7 @@
     <hr class="blue-short">
   </div>
 
-  <div class="card-project">
+  <div class="card-project mb60">
     <div class="img-mob">
       <div>
           <%= image_tag "CSUR15.png", alt: "CSUR15", class:'img-publication'%>
@@ -20,7 +20,7 @@
   </div>
 
   <%= link_to pomar_path do  %>
-  <div class="card-project">
+  <div class="card-project mb60">
     <div class="img-mob">
       <div>
         <%= image_tag "SMI13.png", alt: "SMI13-logo", class:'img-publication', id:'SMI13-logo'%>
@@ -38,7 +38,7 @@
   <% end %>
 
   <%= link_to ppmc_path do  %>
-  <div class="card-project">
+  <div class="card-project mb60">
     <div class="img-mob">
       <div>
         <%= image_tag "SMI12.png", alt: "SMI12-logo", class:'img-publication', id:'SMI12-logo'%>
@@ -55,7 +55,7 @@
   </div>
   <% end %>
 
-  <div class="card-project">
+  <div class="card-project mb60">
     <div class="img-mob">
       <div>
         <%= image_tag "CGI11.png", alt: "CGI11-logo", class:'img-publication', id:'CGI11-logo'%>
@@ -70,7 +70,7 @@
     </div>
   </div>
 
-  <div class="card-project">
+  <div class="card-project mb60">
     <div class="img-mob">
       <div>
         <%= image_tag "web3d10.png", alt: "web3d10-logo", class:'img-publication', id:'web3d10-logo'%>
