--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -25,14 +25,14 @@
 
   <h2>Work experiences</h2>
 
-  <div class="card-project">
+  <div class="card-project mb20">
     <div class="img-mob">
       <div>
          <%= image_tag "github.png", alt: "logo Github", class:'img-publication', style:'height:150px; width:150px' %>
       </div>
     </div>
     <div class="project-desc">
-      <h3>R&D lead at Videolabs SAS</h3>
+      <h3 style="font-size: 20px">R&D lead at Videolabs SAS</h3>
       <p><b>March 2016 to now - Paris, France</b></p>
       <p>Contributions to the Mozilla open source AV1 video encoder (rav1e): motion estimation, AVX2 assembly.</p>
       <p>Research and development of a video recognition application that matches medias by filming them with a mobile device.</p>
@@ -42,19 +42,32 @@
     </div>
   </div>
 
-  <div class="card-project">
+  <div class="card-project mb20">
     <div class="img-mob">
       <div>
          <%= image_tag "github.png", alt: "logo Github", class:'img-publication', style:'height:150px; width:150px' %>
       </div>
     </div>
     <div class="project-desc">
-      <h3> CTO at Instadeo SAS</h3>
+      <h3 style="font-size: 20px"> CTO at Instadeo SAS</h3>
       <p><b>March 2014 to January 2016 - Paris, France</b></p>
       <p>Design and development of a video conference web platform based on WebRTC in Python 3 Django.</p>
     </div>
   </div>
 
+  <div class="card-project mb20">
+    <div class="img-mob">
+      <div>
+         <%= image_tag "github.png", alt: "logo Github", class:'img-publication', style:'height:150px; width:150px' %>
+      </div>
+    </div>
+    <div class="project-desc">
+      <h3 style="font-size: 20px"> Founder at Visualink SAS</h3>
+      <p><b>September 2013 to January 2016 - Paris, France</b></p>
+      <p>Development of an open source image recognition platform <%= link_to '(pastec.io)' , 'http://pastec.io,'  %></p>
+      <p>Prototyping of a mobile video recognition system.</p>
+    </div>
+  </div>
 
     <h2>Education</h2>
 
