--- a/app/views/pages/source-code.html.erb
+++ b/app/views/pages/source-code.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <%= link_to "https://github.com/magwyz" do  %>
-  <div class="card-project">
+  <div class="card-project mb40">
     <div class="img-mob">
       <div>
          <%= image_tag "github.png", alt: "logo Github", class:'img-publication', style:'height:150px; width:150px' %>
@@ -19,7 +19,7 @@
   <% end %>
 
   <%= link_to pomar_path do  %>
-  <div class="card-project">
+  <div class="card-project mb40">
     <div class="img-mob">
       <div>
         <%= image_tag "SMI13.png", alt: "SMI13-logo", class:'img-publication', style:'height:150px; width:150px' %>
@@ -32,7 +32,7 @@
   <% end %>
 
   <%= link_to ppmc_path do  %>
-  <div class="card-project">
+  <div class="card-project mb40">
     <div class="img-mob">
       <div>
         <%= image_tag "SMI12.png", alt: "SMI12-logo", class:'img-publication', style:'height:150px; width:150px'%>
